[package]
name = "functional_pt1"
version = "0.1.0"
authors = ["henry <henry.zhang@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "intro_generics"
path = "intro_generics.rs"

[[bin]]
name = "intro_functions"
path = "intro_functions.rs"